@@ -1,4 +1,5 @@
 # Unreleased
+- [add][minor] Add runtime interface introspection.
 - [fix][minor] Remove the `Sized` restriction for the `EncodeBody` trait.
 - [impl][patch] Use `poll_write_vectored` in the TCP transport to write the header and body with a single syscall.
 
